k8s/apps/db/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db-main
  name: db-main
spec:
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
      nodePort: 31491
  type: NodePort
  selector:
    app: db-main
